Fixed army request not being verified by host for correct basic placement, and added use of collection pieces to maxplayers benchmark. Fixed maxplayers client improperly indexing collection and added accepting of rewards. Fixed board and army selection squares wrapping to next line in Firefox as described in issue #22. Fixed match webpage scrolling disabled on Android browsers by removing touch-action: none. Fixed normalized assert capturing, conveyed characteristics are now defined as applying through the entire turn, and added test case for this.

--- a/web/match.css
+++ b/web/match.css
@@ -1,7 +1,3 @@
-* {
-    touch-action: none;
-}
-
 body {
     background: linear-gradient(rgb(11,25,18), rgb(21,25,28));
     background-attachment: fixed;
